--- a/resources/assets/sass/_aroundme.scss
+++ b/resources/assets/sass/_aroundme.scss
@@ -173,15 +173,13 @@ Around me page styling
 
 
 @media(min-width: 768px) {
+
   .aroundme_page {
     position: relative;
     top: -57px;
-    z-index: -5;
 
     .map-top {
       display: block;
-
-
 
       .map-top-img {
         width: 100%;
@@ -411,6 +409,7 @@ Around me page styling
       margin: 0;
       bottom: 70px;
       right: 15px;
+      z-index:9999;
     }
   }
 }
